tests/sumo/spec/flow/errors/period_no_end/errors.sumo
Error: If 'period', 'vehsPerHour' or 'probability' are given at most one of 'end' and 'number' are allowed in flow 'f1'.
Quitting (on error).
